Modify toList for stream.box for java 8 and java 16 GroupingBy simple example