@@ -2,6 +2,7 @@ package info.manavas.streams;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 public class BoxingUnboxingExample {
@@ -9,7 +10,8 @@ public class BoxingUnboxingExample {
         List<Integer> numbers;
 
         IntStream numStream = IntStream.rangeClosed(0, 5000);//primitive int stream
-        numbers = numStream.boxed().toList();
+        //numbers = numStream.boxed().toList(); java 16
+        numbers = numStream.boxed().collect(Collectors.toList()); //Java 8
         numbers.forEach(System.out::println);
 
         Optional<Integer> sum = numbers.stream().reduce((a,b)->a+b);
